# oxidite-core

./: Cargo.toml
src/: dirs.rs  downloader.rs  instance.rs  lib.rs  main.rs
src/api/: mod.rs
src/assets/: mod.rs
src/core/: mod.rs
src/dirs/: mod.rs
src/examples/: check_compat.rs  monitor_lifecycle.rs  simple_launcher_1.21.1.rs
src/launcher/: mod.rs
src/libraries/: mod.rs
src/models/: assets.rs  manifest.rs  mod.rs  piston_meta.rs
src/models/internal/: config.rs  error.rs  mod.rs
src/sources/: mod.rs
