[package]
name = "oxidite-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json",  "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
zip = "8.5.0"
futures-util = "0.3"
async-trait = "0.1.89"
bytes = "1.11.1"
